# peer_robotics_pallet_vision

./: .gitignore  README.md  env_minimal.yml  environment.yml  package.xml  requirements.txt  setup.cfg  setup.md  setup.py  setup_env.sh
docker/: Dockerfile  docker_setup.md  setup_env.sh
launch/: pallet_detector.launch.py  pallet_segmentor.launch.py
nodes/: pallet_segmentor.py
peer_robotics_pallet_vision/: display_detection.py  display_segmentation.py  pallet_detector.py  pallet_segmentor.py
peer_robotics_pallet_vision/nodes/: display_detection.py  display_segmentation.py  pallet_detector.py  pallet_segmentor.py
rviz/: rviz.rviz  rviz_config.rviz
yolo/models/final/detection/: detection_fp16.cache  detection_fp32.cache
yolo/models/final/optimized_models_detection/: optimized_detection.onnx
yolo/optimization/: export_model.py
yolo/scripts/: make_dataset_using_yolo.py  overlay_labels_on_image.py  test_yolo_detection.py  test_yolo_instance_segmentation.py  test_yolo_semantic_segmentation.py  train_yolo_detection.py  train_yolo_segmentation.py
yolo/scripts/detection/: test_yolo_detection.py  train_yolo_detection.py  train_yolo_detection_half_precision.py  train_yolo_detection_with_optimization.py
yolo/scripts/misc/: test_grounding_dino.py
yolo/scripts/optimization/: export_to_onnx_and_quantize.py  export_to_trt.py
yolo/scripts/segmentation/: test_yolo_segmentation.py  train_yolo_segmentation.py  train_yolo_segmentation_with_optimization.py
yolo/scripts/utils/: check_inference_speed.py  iou_computation.py  performance.py  plot_training_data.py
(+2 files in other folders)
