<?xml version="1.0"?>
<package format="2">
  <name>peer_robotics_pallet_vision</name>
  <version>0.1.0</version>
  <description>Pallet Detection and Segmentation</description>

  <maintainer email="rkulkarni1@wpi.edu">Rutwik Kulkarni</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pytest</exec_depend>
  
  <!-- Optional dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
